# Image2Live2d

./: README.md  pyproject.toml  requirements.txt  setup.py
src/image2live2d/: Image2Live2d.py  XDoG.py  __init__.py  config.py
src/image2live2d/ldivider/: bg_remover.py  ld_convertor.py  ld_processor.py  ld_segment.py  ld_utils.py
