[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Image2Live2d"
version = "0.0.1"
description = "Generate layered resources for Live2D: simple parts split and HF-based masks"
authors = [{ name = "suzukimain" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}
